--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/pharma
-spring.datasource.username=root
-spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://studmysql01.fhict.local/dbi406743
+spring.datasource.username=dbi406743
+spring.datasource.password=admin
